--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@zoomus/websdk": "^1.9.7",
     "amazon-chime-sdk-js": "^2.14.0",
+    "ngx-cookie-service": "^12.0.2",
     "rxjs": "~6.6.0",
     "ts-md5": "^1.2.9",
     "tslib": "^2.2.0",
