--- a/angular.json
+++ b/angular.json
@@ -28,12 +28,20 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/@zoomus/websdk/dist/lib/",
+                "output": "node_modules/@zoomus/websdk/dist/lib/"
+              }
             ],
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "@zoomus/websdk"
+            ]
           },
           "configurations": {
             "production": {
@@ -96,7 +104,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "node_modules/@zoomus/websdk/dist/lib/"
             ],
             "styles": [
               "src/styles.scss"
