--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ngx-cookie-service": "^12.0.2",
     "otp-generator": "^2.0.1",
     "rxjs": "~6.6.0",
+    "spinners-angular": "^0.0.4",
     "ts-md5": "^1.2.9",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -33,8 +34,11 @@
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
+    "@types/jsrsasign": "^8.0.13",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
+    "jsrsasign": "^10.4.0",
+    "jsrsasign-util": "^1.0.5",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
