--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.slim.min.js",
+              "node_modules/popper.js/dist/umd/popper.min.js"
+            ],
             "allowedCommonJsDependencies": [
               "@zoom/videosdk"
             ]
