--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@zoom/videosdk": "^1.1.4",
     "@zoomus/websdk": "^1.9.7",
     "amazon-chime-sdk-js": "^2.14.0",
+    "bootstrap": "^5.1.1",
+    "jquery": "^3.6.0",
     "ngx-cookie-service": "^12.0.2",
     "otp-generator": "^2.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "spinners-angular": "^0.0.4",
     "ts-md5": "^1.2.9",
